# my_school_project

./: .gitignore  BUGS_FIXED.md  Cargo.toml  NETWORK_GUIDE.md  README.md  X86_64_MIGRATION.md  build.ps1  i686-unknown-none.json  linker.ld  mkiso.ps1  qemu-out.txt  run-qemu.cmd  rust-toolchain.toml  x86_64-unknown-none.json
.cargo/: config.toml
.claude/: settings.local.json
boot/: grub.cfg
src/: arch.rs  asm.rs  cpu.rs  framebuffer.rs  gdt.rs  idt.rs  interrupts.rs  keyboard.rs  log.rs  main.rs  mouse.rs  rtc.rs  scheduler.rs  serial.rs  timer.rs  vga.rs
src/drivers/: ata.rs  mod.rs  pci.rs
src/drivers/net/: arp.rs  dhcp.rs  e1000.rs  ethernet.rs  ipv4.rs  mod.rs  rtl8139.rs  tcp.rs  udp.rs
src/fs/: ext3.rs  mod.rs  ramfs.rs  vfs.rs
src/memory/: allocator.rs  bucket_allocator.rs  mod.rs  paging.rs
src/shell/: calc.rs  editor.rs  mod.rs
tools/: rustc-filter.rs
